--- a/index.html
+++ b/index.html
@@ -6,21 +6,7 @@
     <title>egy szuper oldal</title>
 </head>
 <body>
-
-    <h1>szia ez az én szuper jó oldalam // hello this is my superb page.</h1>
-    <ul>
-        <li><h2><a href="about.html">ABOUT</a></h2></li>
-        <li><h2><a href="/pages/orders.html">ORDERS</a></h2></li>
-        <li><h2><a href="/pages/products.html">PRODUCTS</a></h2></li>
-    </ul>
-    <ol>
-        <li>a</li>
-        <li>b</li>
-        <li>c</li>
-
-    </ol>
-<img width="100" src="/img/maxresdefault.jpg" alt="finomburger">
-<a href="/pages/orders.html"><img width="56" src="/img/maxresdefault.jpg" alt="hambi"></a>
+HELLO WORLD
 
 
 </body>
